# openledger

./: .gitignore  OpenLedger Documentation.md  README.md  package-lock.json
backend/: .env.example  IMPLEMENTATION_CHECKLIST.md  README.md  package-lock.json  package.json  tsconfig.json
backend/src/: index.ts  server.ts
backend/src/constants/: disclosure.ts  labels.ts
backend/src/routes/: ai.ts  api.ts  export.ts  payments.ts  programmes.ts
backend/src/services/: aggregation.ts  aiClient.ts  cache.ts  explorerUrl.ts  lastMileClient.ts  pdf.ts  piiFilter.ts  readModel.ts  reportTemplate.ts  sdpForkClient.ts  seedForkClient.ts
backend/src/types/: delivery.ts  payment.ts  programme.ts
backend/test/: pdf-parse.d.ts
backend/test/acceptance/: frontend-integration.test.ts  walkthrough1-programme-view.test.ts  (+3 more)
contracts/donation/: Cargo.toml
contracts/donation/src/: lib.rs
contracts/donation/test_snapshots/test/: test_donate_and_query.1.json  test_double_init_rejected.1.json  test_multiple_donations.1.json  test_withdraw.1.json  test_zero_donation_rejected.1.json
docs/: DECISIONS.md  FRONTEND_BACKEND_SYNC.md  OPEN_ITEMS.md  REQUIREMENTS_FOR_DISBURSEFLOW.md  REQUIREMENTS_FOR_LASTMILE.md  RUNBOOK.md
donationUI copy/: .env  .env.example  package-lock.json  package.json  vite.config.ts
donationUI copy/src/: App.css  App.tsx  index.css
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css  types.ts
frontend/src/api/: ai.ts  (+1 more)
frontend/test/: setup.ts
(+70 files in other folders)
