[package]
name = "donation-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "26.0.0" }

[dev-dependencies]
soroban-sdk = { version = "26.0.0", features = ["testutils"] }

# Patch soroban-env-host to fix a CryptoRng incompatibility with ed25519-dalek v3
# where SigningKey::generate requires CryptoRng but ChaCha20Rng no longer satisfies
# that bound in rand_core v0.10. We replace the call with fill_bytes + from_bytes.
[patch.crates-io]
soroban-env-host = { path = "../soroban-env-host-patched" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
